@@ -123,7 +123,6 @@ omnimatter-infinite=Enable Infinite Omnite
 omnimatter-infinite-omnic-acid=Infinite patches requires omnic acid.
 omnimatter-max-tier=Omnitractor Max Tier
 omnimatter-pure-lvl-per-tier=Number of pure extraction techs between each tier.
-omnimatter-tier-pure-dependency=Pure level for next tier.
 omnimatter-impure-lvls=Number of impure techs.
 omnimatter-fluid-lvl-per-tier=Number of fluid levels per tier.
 omnimatter-fluid-lvl=Number of fluid levels.
@@ -140,7 +139,6 @@ omnimatter-infinite=Decides wether or not infinite omnite patches are generated 
 omnimatter-infinite-omnic-acid=If enabled, infinite omnite will require omnic acid to be mined
 omnimatter-max-tier=Sets the max tier of omnitractors. Can be between 3 and 8.
 omnimatter-pure-lvl-per-tier=Sets the number of pure extraction techs for each ore between each omnitractor tier. Can be between 2 and 6.
-omnimatter-tier-pure-dependency=At this level of pure tech the next tier of omnitractor is researchable. Can be between 1 and 6.
 omnimatter-impure-lvls=Sets the number of impure extraction techs for each ore. Can be between 2 and 6.
 omnimatter-fluid-lvl-per-tier=Sets the number of fluid extraction techs for each fluid between each omnitractor tier. Can be between 1 and 3.
 omnimatter-fluid-lvl=Sets the number of fluid extraction techs required to reach maximum efficiency.(Sets the max amount of fluid level techs!) Can be between 2 and 10.
